--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cities.json": "^1.1.5",
+    "cors": "^2.8.5",
     "countries-list": "^2.6.1",
     "express": "^4.17.3",
     "fs": "^0.0.1-security"
